# lexlok

frontend/: package-lock.json  package.json
frontend/src/routes/: +layout.svelte
server/: .env  Cargo.toml  diesel.toml
server/migrations/2024-08-05-154625_creat_user/: up.sql
server/src/: lib.rs  main.rs  models.rs  pool.rs  schema.rs  tables.rs
