[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.1", features = ["postgres"]}
dotenvy = "0.15.7"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.63"

